=== HEAD

* Deprecate Dataset#and, #or, and #invert raising exceptions for no existing filter (jeremyevans)

* Deprecate Dataset#{and,filter,exclude,or} affecting the HAVING clause (jeremyevans)

* Deprecate passing explicit columns to update as separate arguments to Model#save (jeremyevans)

* Allow specifying explicit columns to update in Model#save via the :columns option (jeremyevans)

* Add ability set the default for join_table's :qualify option via Dataset#default_join_table_qualification (jeremyevans)

* Deprecated :root=>true meaning :root=>:both in the json_serializer (jeremyevans)

* Deprecate core extension usage if the core_extensions have not been explicitly loaded (jeremyevans)

* Deprecate Symbol#{[],<,<=,>,>=} methods when using the core_extensions (jeremyevans)

* Add ruby18_symbol_extensions extension for the Symbol#{[],<,<=,>,>=} methods (jeremyevans)

=== 3.47.0 (2013-05-01)

* Don't fail for missing conversion proc in pg_typecast_on_load plugin (jeremyevans)

* Rename PGRangeOp #starts_before and #ends_after to #ends_before and #starts_after (soupmatt) (#655)

* Add Database#supports_schema_parsing? for checking for schema parsing support (jeremyevans)

* Handle hstore[] types on PostgreSQL if using pg_array and pg_hstore extensions (jeremyevans)

* Don't reset conversion procs when loading pg_* extensions (jeremyevans)

* Handle domain types when parsing the schema on PostgreSQL (jeremyevans)

* Handle domain types in composite types in the pg_row extension (jeremyevans)

* Add Database.extension, for loading an extension into all future databases (jeremyevans)

* Support a :search_path Database option for setting PostgreSQL search_path (jeremyevans)

* Support a :convert_infinite_timestamps Database option in the postgres adapter (jeremyevans)

* Support a :use_iso_date_format Database option in the postgres adapter, for per-Database specific behavior (jeremyevans)
