@@ -1329,7 +1329,7 @@ describe "Dataset#select_more" do
     @d = Sequel::Dataset.new(nil).from(:test)
   end
   
-  specify "should act like #select for datasets with no selection" do
+  qspecify "should act like #select for datasets with no selection" do
     @d.select_more(:a, :b).sql.should == 'SELECT a, b FROM test'
     @d.select_all.select_more(:a, :b).sql.should == 'SELECT a, b FROM test'
     @d.select(:blah).select_all.select_more(:a, :b).sql.should == 'SELECT a, b FROM test'
