@@ -1,5 +1,7 @@
 === HEAD
 
+* Deprecate Dataset#select_more meaning Dataset#select when called without an existing selection (jeremyevans)
+
 * Deprecate Dataset#and, #or, and #invert raising exceptions for no existing filter (jeremyevans)
 
 * Deprecate Dataset#{and,filter,exclude,or} affecting the HAVING clause (jeremyevans)
